# Embedded-Control-Robotics

./: .gitignore  .gitmodules  README.md
Emb_Testing/CI_Pipelines/arduino-due-pytest-hil-example-main/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  analog_in_out.ino  requirements.txt  test_arduino_hil.py  test_arduino_load.py
Emb_Testing/Embedded_Test/U-Test/: README.md
FPGA/: README.md
FPGA/VERILOG/Greater than 2bit/: greater_than.v  greater_than_tb.v  greater_than_tb.vcd  greater_than_tb.vvp
FPGA/VERILOG/hello_world/: ReadMe.md  hello_tb.v  hello_tb.vcd  hello_tb.vvp
FPGA/VERILOG/line decoder/: decoder.v  decoder1to2.vcd  decoder1to2_tb.v  decoder1to2_tb.vvp  decoder2to4_tb.v  decoder2to4_tb.vcd  decoder2to4_tb.vvp
FPGA/VHDL/AND/: half_adder_tb.vhd
FPGA/VHDL/Hello_World/: hello.vhdl  work-obj93.cf
Firmware/BareMetalSeries/app/: Makefile
Firmware/BareMetalSeries/app/src/: firmware.c  timer.c
Firmware/BareMetalSeries/bootloader/: BareMetalSeries.code-workspace  Makefile  pad-bootloader.py
Firmware/BareMetalSeries/bootloader/inc/: comms.h
Firmware/BareMetalSeries/bootloader/src/: bootloader.c  comms.c
PlatformIO/Projects/Calculator/: platformio.ini
PlatformIO/Projects/Calculator/src/: main.c
RTOS/0/Application/: main.c
RTOS/0/tm4c123-keil/: .clangd  lesson.cbuild-idx.yml  lesson.cbuild-pack.yml  lesson.cbuild-set.yml  lesson.cproject.yml  lesson.csolution.yml  lesson.uvguix.aibar  lesson.uvoptx  lesson.uvprojx  main.c
RTOS/0/tm4c123-keil/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
RTOS/1/Blank_solution/: Blank_solution.cbuild-idx.yml  Blank_solution.cbuild-pack.yml  Blank_solution.cbuild-set.yml  Blank_solution.csolution.yml
RTOS/1/Blank_solution/Project0/: .clangd  main.c
RTOS/1/Blank_solution/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
RTOS/1/Blank_solution/tmp/Project0.Debug+TM4C123GH6PM/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
RTOS/1/Blank_solution/tmp/Project0.Debug+TM4C123GH6PM/src/Project0.Debug+TM4C123GH6PM-stamp/: Project0.Debug+TM4C123GH6PM-configure-.cmake  Project0.Debug+TM4C123GH6PM-database-.cmake  Project0.Debug+TM4C123GH6PM-source_dirinfo.txt
RTOS/1/Blank_solution/tmp/Project0.Debug+TM4C123GH6PM/tmp/: Project0.Debug+TM4C123GH6PM-cfgcmd.txt  Project0.Debug+TM4C123GH6PM-mkdirs.cmake
RTOS/Mini_RTOS/: README.md
RTOS/Mini_RTOS/tm4c123-keil/: bsp.c  bsp.h  lesson.uvguix.aibar  lesson.uvoptx  lesson.uvprojx  main.c  miros.c  miros.h
RTOS/Mini_RTOS/tm4c123-keil/dbg/: lesson.axf  lesson.build_log.htm  lesson.htm  lesson.lnp  lesson.map  lesson_dbg.dep  miros.d  qep_hsm.d  qep_msm.d  qf_act.d  qf_actq.d  qf_defer.d  qf_dyn.d  qf_mem.d  qf_ps.d  qf_qact.d  qf_qeq.d  qf_qmact.d  qf_time.d  qxk.d  qxk_mutex.d  qxk_port.d  qxk_sema.d  qxk_xthr.d
Robotics/ROS2/ROS_test/: my_robot.urdf  readme.md
Tiva_C_series/embedded/CCS/.jxbrowser-data/: ChannelIDS  History  QuotaManager  Visited Links
Tiva_C_series/embedded/CCS/lesson/: .ccsproject  .cproject
Tiva_C_series/embedded/lesson-21/tm4c123-keil/: lesson.uvguix.aibar  lesson.uvoptx  lesson.uvprojx  main.c
Tiva_C_series/embedded/lesson-22/tm4c123-keil/: bsp.c  lesson.uvguix.aibar  lesson.uvoptx  lesson.uvprojx
Tiva_C_series/embedded/lesson-23/tm4c123-keil/: lesson.uvguix.aibar  lesson.uvoptx
Tiva_C_series/project 0/: .cproject  .project  main.c
Tiva_C_series/project 0/.launches/: EmbeddedPractice.launch
Tiva_C_series/project1/: CMakeLists.txt  main.c
(+76 files in other folders)
